--- a/extrafiles/config.toml
+++ b/extrafiles/config.toml
@@ -12,3 +12,8 @@ linker = "@BUILD_ROOT@/tools/system-gcc/bin/x86_64-managarm-gcc"
 libc = { path = "@SOURCE_ROOT@/ports/rust-libc" }
 num_cpus = { path = "@SOURCE_ROOT@/ports/rust-num-cpus" }
 users = { path = "@SOURCE_ROOT@/ports/rust-users" }
+socket2 = { path = "@SOURCE_ROOT@/ports/rust-socket2" }
+nix = { path = "@SOURCE_ROOT@/ports/rust-nix" }
+getrandom = { path = "@SOURCE_ROOT@/ports/rust-getrandom" }
+filetime = { path = "@SOURCE_ROOT@/ports/rust-filetime" }
+mio = { path = "@SOURCE_ROOT@/ports/rust-mio" }
