--- a/bootstrap.d/sys-apps.yml
+++ b/bootstrap.d/sys-apps.yml
@@ -135,7 +135,7 @@ packages:
         - '--path'
         - '@THIS_SOURCE_DIR@'
         - '--root'
-        - '@THIS_COLLECT_DIR@'
+        - '@THIS_COLLECT_DIR@/usr'
         - '-j@PARALLELISM@'
         environ: # Required to build libgit2
           CC: x86_64-managarm-gcc
@@ -493,7 +493,7 @@ packages:
         - '--path'
         - '@THIS_SOURCE_DIR@'
         - '--root'
-        - '@THIS_COLLECT_DIR@'
+        - '@THIS_COLLECT_DIR@/usr'
         - '-j@PARALLELISM@'
 
   - name: util-linux
@@ -606,6 +606,7 @@ packages:
       version: '0.0.6p1'
     tools_required:
       - host-cargo
+      - system-gcc
     sources_required:
       - rust-patched-libs
     configure:
@@ -620,10 +621,12 @@ packages:
         - '--path'
         - '@THIS_SOURCE_DIR@'
         - '--root'
-        - '@THIS_COLLECT_DIR@'
+        - '@THIS_COLLECT_DIR@/usr'
         - '-j@PARALLELISM@'
-        # - '--features'
-        # - 'unix'
+        - '--features'
+        - 'unix'
+        environ:
+          CC: x86_64-managarm-gcc
 
   - name: which
     labels: [aarch64]
